RESOLVED FIXED266761
Sandbox extension for cache directory is not created
https://bugs.webkit.org/show_bug.cgi?id=266761
Summary Sandbox extension for cache directory is not created
Per Arne Vollan
Reported 2023-12-21 03:21:24 PST
Sandbox extension for cache directory is not created for the GPU process.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-21 03:21:34 PST
Per Arne Vollan
Comment 2 2023-12-21 03:23:32 PST
EWS
Comment 3 2024-03-29 18:07:42 PDT
Committed 276851@main (c9cb06e0987a): <https://commits.webkit.org/276851@main> Reviewed commits have been landed. Closing PR #22155 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.