Sandbox extension for cache directory is not created https://bugs.webkit.org/show_bug.cgi?id=266761 rdar://119984186

Reviewed by Brent Fulgham.

Sandbox extension for cache directory is not created for the GPU process.

* Source/WebKit/GPUProcess/GPUProcess.h:
* Source/WebKit/GPUProcess/GPUProcess.messages.in:
* Source/WebKit/GPUProcess/cocoa/GPUProcessCocoa.mm:
(WebKit::GPUProcess::resolveBookmarkDataForCacheDirectory):
(WebKit::GPUProcess::consumeFileAccessTokenToCacheDirectory): Deleted.
* Source/WebKit/UIProcess/Cocoa/GPUProcessProxyCocoa.mm:
(WebKit::GPUProcessProxy::createBookmarkDataForCacheDirectory):
(WebKit::GPUProcessProxy::createSandboxExtensionInContainer): Deleted.
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::didFinishLaunching):
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.h:

Canonical link: https://commits.webkit.org/276851@main